stuck with validation issue

--- a/src/components/demo-component/demo-component.css
+++ b/src/components/demo-component/demo-component.css
@@ -1,3 +1,12 @@
 .wrapper {
   margin: 16px;
 }
+
+.wrapper input {
+  border: none;
+  border-bottom: 1px solid #000;
+}
+
+.wrapper input:focus {
+  outline: none;
+}
